k8s/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: client-pod
 labels:
  component: web
spec:
 containers:
  - name: client
    image: stephengrider/multi-worker
    ports:
     - containerPort: 3000
